--- a/posts/2017-01-01-15-30-first-post.md
+++ b/posts/2017-01-01-15-30-first-post.md
@@ -1,11 +1,12 @@
 ---
-title: My First Post!
+title: 📖 My First Post
 name: my-first-post
 date: 2017-01-01 00:00
 url: /my-first-post
+image: 
+summary: Type your blog post's summary
+author: Selçuk Ermaya, se
 ---
-
-# 📖 My First Post
 
 Seems cool 😎 isn't it?
 
